--- a/jioazeenew2.html
+++ b/jioazeenew2.html
@@ -78,7 +78,7 @@ let currentUrl = "";
 
 async function loadM3U() {
   try {
-    const m3uUrl = "http://192.168.55.103:5350/playlist.m3u";
+    const m3uUrl = "https://venkatmitv0-byte.github.io/Azee/doddi.m3u";
     const response = await fetch(m3uUrl);
     const text = await response.text();
 
@@ -197,4 +197,5 @@ document.getElementById("categoryFilter").addEventListener("change", renderChann
 document.addEventListener("DOMContentLoaded", loadM3U);
 </script>
 </body>
+
 </html>
