--- a/webpage.html
+++ b/webpage.html
@@ -32,7 +32,7 @@
 <body>
 
 <header>
-  <h1> DVR IPTV</h1>
+  <h1>📡 DVR IPTV</h1>
 </header>
 
 <div class="topbar">
@@ -306,4 +306,5 @@ document.getElementById("categoryFilter").addEventListener("change", renderChann
 document.addEventListener("DOMContentLoaded", loadM3U);
 </script>
 </body>
+
 </html>
