--- a/jioazeenew2.html
+++ b/jioazeenew2.html
@@ -67,7 +67,7 @@
 </div>
 
 <footer>
-  🔗 <a href="*****" target="_blank" style="color:#00ffc8;">@dvriptv</a> | Credit: <strong>Venkat</strong>
+  🔗 <a href="https://t.me/DVRiptv" target="_blank" style="color:#00ffc8;">@dvriptv</a> | Credit: <strong>Venkat</strong>
 </footer>
 
 <script>
@@ -199,3 +199,4 @@ document.addEventListener("DOMContentLoaded", loadM3U);
 </body>
 
 </html>
+
