--- a/m3uloderweb.html
+++ b/m3uloderweb.html
@@ -69,13 +69,13 @@
             <div class="meta" id="nowGroup">___</div>
             <div class="epgline" id="nowEPG">No EPG</div>
           </div>
-          <button id="favBtn" class="btn"></button>
+          <button id="favBtn" class="btn">❤️</button>
         </div>
         <div style="margin-top:10px">
           <div class="small">M3U URL:</div>
           <div style="display:flex;gap:8px;margin-top:6px;">
             <input id="m3uUrl" class="search" value="" />
-            <button id="fetchBtn" class="btn accent">Fetch</button>
+            <button id="fetchBtn" class="btn accent">LOAD M3U</button>
           </div>
         </div>
       </div>
@@ -173,3 +173,4 @@ window.onload=()=>{const url=document.getElementById("m3uUrl").value;fetch(url).
 </body>
 
 </html>
+
