--- a/m3uloderweb.html
+++ b/m3uloderweb.html
@@ -69,7 +69,7 @@
             <div class="meta" id="nowGroup">___</div>
             <div class="epgline" id="nowEPG">No EPG</div>
           </div>
-          <button id="favBtn" class="btn">❤️</button>
+          <button id="favBtn" class="btn">⭐</button>
         </div>
         <div style="margin-top:10px">
           <div class="small">M3U URL:</div>
@@ -173,4 +173,5 @@ window.onload=()=>{const url=document.getElementById("m3uUrl").value;fetch(url).
 </body>
 
 </html>
+
 
