--- a/m3uloderweb.html
+++ b/m3uloderweb.html
@@ -165,7 +165,7 @@ document.getElementById("fetchBtn").onclick=()=>{fetch(document.getElementById("
 document.getElementById("search").oninput=e=>{const q=e.target.value;const fav=document.getElementById("showFavs").classList.contains("active");const groupBtn=document.querySelector(".group-btn.active");const g=(groupBtn&&groupBtn.textContent!=="All")?groupBtn.textContent:null;renderChannels(g,fav,q);};
 document.getElementById("showAll").onclick=()=>{document.querySelectorAll(".group-btn").forEach(b=>b.classList.remove("active"));document.getElementById("showAll").classList.add("active");renderChannels();};
 document.getElementById("showFavs").onclick=()=>{document.querySelectorAll(".group-btn").forEach(b=>b.classList.remove("active"));document.getElementById("showFavs").classList.add("active");renderChannels(null,true);};
-document.getElementById("favBtn").onclick=()=>{const t=document.getElementById("nowTitle").textContent;const ch=channels.find(c=>c.title===t);if(ch){toggleFav(ch.url);document.getElementById("favBtn").textContent=isFav(ch.url)?"":"";}};
+document.getElementById("favBtn").onclick=()=>{const t=document.getElementById("nowTitle").textContent;const ch=channels.find(c=>c.title===t);if(ch){toggleFav(ch.url);document.getElementById("favBtn").textContent=isFav(ch.url)?"⭐":"❤️";}};
 
 // auto load
 window.onload=()=>{const url=document.getElementById("m3uUrl").value;fetch(url).then(r=>r.text()).then(parseM3U).catch(()=>{});};
@@ -173,6 +173,7 @@ window.onload=()=>{const url=document.getElementById("m3uUrl").value;fetch(url).
 </body>
 
 </html>
+
 
 
 
