--- a/dvriptv.html
+++ b/dvriptv.html
@@ -73,7 +73,7 @@
 <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
 <script>
   const player = videojs('tataplayer');
-  const m3uUrl = "https://amitb3669.github.io/jiotv-plus/";
+  const m3uUrl = "https://dvriptvhelps.github.io/M3U/jioplus$$.m3u";
 
   async function loadChannels() {
     const res = await fetch(m3uUrl);
